[package]
name = "astralane-quic-client"
edition = "2021"
version = "0.0.1"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "net", "macros", "time"] }
anyhow = "1.0.99"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
solana-sdk = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
bincode = "1.3.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.134"

[[example]]
name = "send_transaction"
path = "examples/send_transaction.rs"
